--- a/.env
+++ b/.env
@@ -3,6 +3,12 @@ DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=H4DdGD6dqb6BBDNSsvqsdjqd,m
 DB_NAME=sprintman
+PORT=80
+SLACK_CLIENT_ID=931735759395.943226061765
+SLACK_REDIRECT_URL=https://api.sprintman.debatz.tech/auth
+SLACK_CLIENT_SECRET=d15a6d6f092530c4bae41dcb49141ce3
+SLACK_SIGNING_SECRET=88d22851278da57585d553641a72b5ee
+SLACK_SCOPES=identity.basic identity.email identity.avatar chat:write users:write
 
 SMTP_HOST=ssl0.ovh.net
 SMTP_USER=postmaster@handsome.gift
@@ -10,14 +16,7 @@ SMTP_PASSWORD=Stromberg,123
 SMTP_PORT=465
 SMTP_USE_HTTPS=true
 
-SLACK_CLIENT_ID=931735759395.943226061765
-SLACK_REDIRECT_URL=http://localhost/api/auth
-SLACK_CLIENT_SECRET=d15a6d6f092530c4bae41dcb49141ce3
-SLACK_SIGNING_SECRET=88d22851278da57585d553641a72b5ee
-SLACK_SCOPES=identity.basic identity.email identity.avatar chat:write users:write
-
 NAME=handsomegift
-PORT=80
 ENV=dev
 SECRET=
 API_DOMAIN=localhost:3001
