--- a/package.json
+++ b/package.json
@@ -10,30 +10,34 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "yarn run clean && tsc -p .",
+    "build": "yarn run clean && yarn run copy && tsc -p .",
     "watch": "nodemon -L -e 'ts/html' -w ./src -x yarn run watch:serve",
     "watch:serve": "ts-node-dev --respawn --transpileOnly src/index.ts",
-    "copy": "copyfiles -u 1 './src/**/*.{css,html,js,gif,png,jpeg,jpg,ico}' './dist/'",
+    "copy": "copyfiles -u 1 './src/**/*.{css,html,js,gif,png,jpeg,jpg,ico,json}' './dist/'",
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "clean": "rimraf dist/*",
     "lint": "tslint -c tslint.json -p tsconfig.json --fix",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker": "yarn build && docker-compose up --build &"
   },
   "dependencies": {
+    "@slack/events-api": "^2.3.1",
+    "@slack/interactive-messages": "^1.4.1",
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
-    "@types/express": "^4.16.1",
+    "@types/express": "^4.17.2",
+    "@types/express-serve-static-core": "^4.17.0",
     "@types/moment": "^2.13.0",
     "@types/node-schedule": "^1.2.3",
     "@types/redis": "^2.8.14",
     "@types/uuid": "^3.4.7",
-    "axios": "^0.18.0",
+    "axios": "^0.19.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "node-schedule": "^1.3.2",
@@ -50,7 +54,7 @@
     "rimraf": "^2.6.3",
     "ts-node": "^8.0.2",
     "ts-node-dev": "^1.0.0-pre.32",
-    "tslint": "^5.12.1",
+    "tslint": "^6.0.0",
     "typescript": "^3.3.3"
   }
 }
